// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`DataTable should render autoload 1`] = `
<DocumentFragment>
  <table
    class="data-table"
  >
    <thead>
      <tr>
        <th
          class="data-table__header-cell--checkbox"
        >
          <div
            class="checkbox-cell"
          >
            <input
              id="12"
              type="checkbox"
            />
            <label
              aria-label="Selection control for all visible items"
              for="12"
            />
          </div>
        </th>
        <th
          class="data-table__header-cell--sortable data-table__header-cell--ascend"
          data-column-name="content1"
        >
          Column 1
        </th>
        <th
          class=""
          data-column-name="content2"
        >
          Column 2
        </th>
        <th
          class="data-table__header-cell--sortable"
          data-column-name="content3"
        >
          <h1>
            Column 3
          </h1>
        </th>
      </tr>
    </thead>
    <tbody
      translate="no"
    >
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id0"
            id="2"
            type="checkbox"
          />
          <label
            aria-label="id0"
            for="2"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id1"
            id="3"
            type="checkbox"
          />
          <label
            aria-label="id1"
            for="3"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id2"
            id="4"
            type="checkbox"
          />
          <label
            aria-label="id2"
            for="4"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id3"
            id="5"
            type="checkbox"
          />
          <label
            aria-label="id3"
            for="5"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id4"
            id="6"
            type="checkbox"
          />
          <label
            aria-label="id4"
            for="6"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id5"
            id="7"
            type="checkbox"
          />
          <label
            aria-label="id5"
            for="7"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id6"
            id="8"
            type="checkbox"
          />
          <label
            aria-label="id6"
            for="8"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id7"
            id="9"
            type="checkbox"
          />
          <label
            aria-label="id7"
            for="9"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id8"
            id="10"
            type="checkbox"
          />
          <label
            aria-label="id8"
            for="10"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id9"
            id="11"
            type="checkbox"
          />
          <label
            aria-label="id9"
            for="11"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="data-loader__loading"
  >
    <div
      class="loader-container"
    >
      <test-file-stub
        class="loader"
        height="100"
        width="100"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DataTable should render click-to-load 1`] = `
<DocumentFragment>
  <table
    class="data-table"
  >
    <thead>
      <tr>
        <th
          class="data-table__header-cell--checkbox"
        >
          <div
            class="checkbox-cell"
          >
            <input
              id="12"
              type="checkbox"
            />
            <label
              aria-label="Selection control for all visible items"
              for="12"
            />
          </div>
        </th>
        <th
          class="data-table__header-cell--sortable data-table__header-cell--ascend"
          data-column-name="content1"
        >
          Column 1
        </th>
        <th
          class=""
          data-column-name="content2"
        >
          Column 2
        </th>
        <th
          class="data-table__header-cell--sortable"
          data-column-name="content3"
        >
          <h1>
            Column 3
          </h1>
        </th>
      </tr>
    </thead>
    <tbody
      translate="no"
    >
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id0"
            id="2"
            type="checkbox"
          />
          <label
            aria-label="id0"
            for="2"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id1"
            id="3"
            type="checkbox"
          />
          <label
            aria-label="id1"
            for="3"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id2"
            id="4"
            type="checkbox"
          />
          <label
            aria-label="id2"
            for="4"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id3"
            id="5"
            type="checkbox"
          />
          <label
            aria-label="id3"
            for="5"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id4"
            id="6"
            type="checkbox"
          />
          <label
            aria-label="id4"
            for="6"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id5"
            id="7"
            type="checkbox"
          />
          <label
            aria-label="id5"
            for="7"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id6"
            id="8"
            type="checkbox"
          />
          <label
            aria-label="id6"
            for="8"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id7"
            id="9"
            type="checkbox"
          />
          <label
            aria-label="id7"
            for="9"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id8"
            id="10"
            type="checkbox"
          />
          <label
            aria-label="id8"
            for="10"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
      <tr>
        <td
          class="checkbox-cell"
        >
          <input
            data-id="id9"
            id="11"
            type="checkbox"
          />
          <label
            aria-label="id9"
            for="11"
            title="click to select, shift+click for multiple selection"
          />
        </td>
        <td>
          foo
        </td>
        <td>
          bar
        </td>
        <td>
          baz
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="data-loader__loading"
  >
    <button
      class="button secondary"
      data-testid="click-to-load-more"
      type="button"
    >
      Load more data
    </button>
  </div>
</DocumentFragment>
`;
